--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Загаловок/h1>
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="header">
+      <a href="index.html" class="logotip">
+        <img src="image__logotip/icon.png" alt="" />
+      </a>
+      <div class="text_header">
+        <h1>Китобхонаи миллии Тоҷикистон</h1>
+        <h4>
+          Тоҷикон аз қадим фарҳанги баланди китобдорӣ ва китобхонӣ доштанд,
+        </h4>
+        <h4>
+          қаламро эҳтиром намуда, онро ҳамчун ганҷи бебаҳо ҳифз мекарданд.
+        </h4>
+        <h4 class="text__h4">Эмомали Рахмон</h4>
+      </div>
+      <a href="index.html" class="logotip">
+        <img src="image__logotip/Без названия.jpg" alt="" />
+      </a>
+    </div>
+    <h1>Загаловок</h1>
+
+    <script src="app.js"></script>
+  </body>
 </html>
