--- a/habarho.html
+++ b/habarho.html
@@ -9,13 +9,30 @@
     <link rel="stylesheet" href="./fontawesome-free-6.4.2-web/css/all.css">
 </head>
 <body>
+
+   <div class="header">
+      <a href="index.html" class="logotip">
+          <img src="image__logotip/icon.png" alt="">
+      </a>
+      <div class="text_header">
+      <h1>Китобхонаи миллии Тоҷикистон</h1>
+      <div class="text_h">
+      <h4>Тоҷикон аз қадим фарҳанги баланди китобдорӣ ва  китобхонӣ доштанд, </h4>
+           <h4> қаламро эҳтиром намуда, онро ҳамчун ганҷи бебаҳо ҳифз мекарданд.</h4>
+           <h4 class="text__h4">Эмомали Рахмон</h4>
+          </div>
+          </div>
+  <a href="index.html" class="logotip logo__nishon">
+      <img src="image__logotip/Без названия.jpg" alt="">
+  </a>
+  </div>
     <ul class="navbar navbar_2">
         <li><a href="./index.html">Асосҳо</a></li>
         <li><a href="#">Хабарҳо</a></li> 
         <ul class="dropdown">
          <li class="drop_list"><a href="#">Сохтор<i class="fa fa-caret-down"></i></a></li>
      <ul class="dropdown-content dropdown-content_1">
-         <li><a href="./index3.html">Роҳбарият</a></li>
+         <li><a href="./director.html">Роҳбарият</a></li>
          <li><a href="#">Шуъбаҳо</a></li>
          <li><a href="#">Оиннома</a></li>
          <li><a href="#">Қонун</a></li>
@@ -50,6 +67,8 @@
      <li><a href="#">Суратхона</a></li> 
      <li><a href="#">Тамос</a></li> 
     </ul>
+
+    <div class="container">
      <div class="blog">
         <a href="#" class="box">Наврӯзи диёр омад</a>
         <p>18/03/2021 - 15:46</p>
@@ -102,7 +121,7 @@
         <a href="#" class="box">Баҳор дар маҳфили “Ман метавонам”</a>
         <p>15/03/2021 - 14:32</p>
      </div>
-     
+   </div>
      <footer class="fot">
         <p>2024 сол</p>
     </footer>
