--- a/director.html
+++ b/director.html
@@ -4,14 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Роҳбарият</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/fontawesome-free-6.4.2-web/css/all.css">
-    <link rel="icon" href="/images/icon.png">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./fontawesome-free-6.4.2-web/css/all.css">
+    <link rel="icon" href="./images/icon.png">
 </head>
 <body>
+
+    <div class="header">
+        <a href="index.html" class="logotip">
+            <img src="image__logotip/icon.png" alt="">
+        </a>
+        <div class="text_header">
+        <h1>Китобхонаи миллии Тоҷикистон</h1>
+        <div class="text_h">
+        <h4>Тоҷикон аз қадим фарҳанги баланди китобдорӣ ва  китобхонӣ доштанд, </h4>
+             <h4> қаламро эҳтиром намуда, онро ҳамчун ганҷи бебаҳо ҳифз мекарданд.</h4>
+             <h4 class="text__h4">Эмомали Рахмон</h4>
+            </div>
+            </div>
+    <a href="index.html" class="logotip logo__nishon">
+        <img src="image__logotip/Без названия.jpg" alt="">
+    </a>
+    </div>
+
     <ul class="navbar navbar_2">
-        <li><a href="index.html">Асосҳо</a></li>
-        <li><a href="index2.html">Хабарҳо</a></li> 
+        <li><a href="./index.html">Асосҳо</a></li>
+        <li><a href="./habarho.html">Хабарҳо</a></li> 
         <ul class="dropdown">
          <li class="drop_list"><a href="#">Сохтор<i class="fa fa-caret-down"></i></a></li>
      <ul class="dropdown-content dropdown-content_1">
@@ -50,9 +68,28 @@
      <li><a href="#">Суратхона</a></li> 
      <li><a href="#">Тамос</a></li> 
     </ul>
+
+    <h1 class="rohbar">Роҳбарият</h1>
     <div class="box_2">
+        <div class="direktor">
         <h2>Файзализода Ҷумахон Хол</h2>
-        <p>Директори Китобхонаи миллӣ</p>
+        <h3>Директори Китобхонаи миллӣ</h3>
+ 
+        <div class="direktor">
+            <h2>Раҷабова Салима Советовна</h2>
+            <h3>муовини якуми Директор</h3>
+        </div>
+
+        <div class="direktor">
+            <h2>Маҳмудов Гадобек Буриевич</h2>
+            <h3>муовини Директор</h3>
+        </div>
+
+        <div class="direktor">
+            <h2>Нурзода Ҷалолуддин Низомиддин</h2>
+            <h3>муовини Директор</h3>
+        </div>
+    </div>
     </div>
 </body>
 </html>
