--- a/index.html
+++ b/index.html
@@ -10,13 +10,30 @@
 </head>
 <body>
 
+    <div class="header">
+        <a href="index.html" class="logotip">
+            <img src="image__logotip/icon.png" alt="">
+        </a>
+        <div class="text_header">
+        <h1>Китобхонаи миллии Тоҷикистон</h1>
+        <div class="text_h">
+        <h4>Тоҷикон аз қадим фарҳанги баланди китобдорӣ ва  китобхонӣ доштанд, </h4>
+             <h4> қаламро эҳтиром намуда, онро ҳамчун ганҷи бебаҳо ҳифз мекарданд.</h4>
+             <h4 class="text__h4">Эмомали Рахмон</h4>
+            </div>
+            </div>
+    <a href="index.html" class="logotip logo__nishon">
+        <img src="image__logotip/Без названия.jpg" alt="">
+    </a>
+    </div>
+
     <ul class="navbar">
        <li><a href="#">Асосҳо</a></li>
-       <li><a href="./index2.html">Хабарҳо</a></li> 
+       <li><a href="./habarho.html">Хабарҳо</a></li> 
        <ul class="dropdown">
         <li class="drop_list"><a href="#">Сохтор<i class="fa fa-caret-down"></i></a></li>
     <ul class="dropdown-content dropdown-content_1">
-        <li><a href="./index3.html">Роҳбарият</a></li>
+        <li><a href="./director.html">Роҳбарият</a></li>
         <li><a href="#">Шуъбаҳо</a></li>
         <li><a href="#">Оиннома</a></li>
         <li><a href="#">Қонун</a></li>
@@ -52,7 +69,7 @@
     <li><a href="#">Тамос</a></li> 
 </ul>
 
-<h1>Китобхонаи миллии Тоҷикистон</h1>
+<div class="container">
 <div class="gallery">
     <div class="photo">
                 <img src="" alt="" class="shown">
@@ -66,15 +83,17 @@
     <p class="p_2">Китобхонаи миллии Тоҷикистон - муассисаи давлатии фарҳангии Тоҷикистон мебошад. Китобхона 20 марти соли 2012 ба ҷойи Китобхонаи давлатии ба номи Абулқосим Фирдавсӣ дар ш. Душанбе таъсис дода шудааст.
         Китобхонаи миллии Тоҷикистон ба номи Абулқосим Фирдавсӣ соли 1933 дар заминаи китобхонаи шаҳрӣ таъсис ёфта, соли 1934 ба ифтихори 1000-солагии Абулқосим Фирдавсӣ номи ӯро гирифт. Дар даврони шӯравӣ дар хазинаи китобхона зиёда аз 3 млн. нусха китобу дастхатҳои нодир ба забонҳои гуногун ҷамъ оварда шуда барои истифодаи хонандагон пещкаш карда мешуданд. Соли 1993 Китобхона мақоми миллиро соҳиб шуд.Дар фондҳои китобхона 3 миллиону 326 ҳазору 300 нусха китобу дастхатҳои нодир маҳфузанд ва аз онҳо беш аз 35000 нафар хонандагони доимӣ истифода мекунанд. Китобхонаи миллии Ҷумҳурии Тоҷикистон ба номи Абулқосим Фирдавсӣ дар тӯли фаъолияти хеш барои ҷамъоварӣ, ҳифзу нигоҳдорӣ ва мавриди омӯзишу таҳқиқ қарор додани нодиртарин ёдгориҳои хаттии миллати тоҷик, дастнависҳои илмию адабӣ, ки ҳазорсолаҳо умр доранд, саҳми муносиб гузоштааст. Вобаста аз имкониятҳои мавҷуда имрӯз дар Китобхонаи миллӣ барои хонандагон шароитҳои мусоид муҳайё карда шудааст. Чунончи, Китобхона дар таҳияи феҳристи электронии саҳм гирифта, беш аз 50 ҳазор номгӯи китобҳои тоза нашро ба ин васила дастраси хонандагон гардонидааст.</p> 
         <div class="video">
-            <video src="/video/кит.миллӣ.mp4" autoplay  muted></video>
+            <video src="./video/кит.миллӣ.mp4" autoplay  muted></video>
         </div>
         <p class="p_2">Дар Китобхона аз моҳи апрели соли 2004 толори нави нуқтаи хизматрасонии модулӣ барои донишҷуён созмон дода шудааст, ки дорои беш аз 15 ҳазор китобҳои тозанашри фаннӣ мебошад ва аз ин толор хонандагони сершумор истифода мебаранд. Моҳи сентябри соли 2006 толори нави хониши электронӣ созмон дода шуд, ки дорои беш аз 115 ҳазор нусха нашрияҳои электронӣ мебошад. Ин толор бо технологияи замонавӣ: 25 компютер, 5 сканер, 3 принтер, 3 дастгоҳи нусхабардорӣ таҷҳизонида шуд ва ба шабакаи байналмилалии Интернет пайваст мебошад. Истифодаи Интернет барои ҳамаи хонандагон бо таври ройгон аст.
         Бунёди бинои нави Китобхонаи миллии Тоҷикистон соли 2007 оғоз ёфта, ҳазинааш зери 40 миллион доллар баровард мешавад. Масоҳати умумии китобхона ҳудуди 45 ҳазор метри мураббаъ буда, он дорои 40 толори хониш, 22 махзан барои нигоҳдории беш аз 10 миллион нусха китоб ва дигар асноди иттилоотӣ ва маҷлисгоҳҳо ва чопхона мебошад. Бинои нав 167 метр дарозӣ ва 52 метр баландӣ дошта, аз чор қисм иборат аст. Қисми «а» - аз 9 ошёна бо таҳхона, қисми «б» ва «в» аз 6 ошёна бо таҳхона, қисми «г» аз 4 ошёна бо ошхона иборат аст. Масоҳати умумии китобхона 44 ҳазору 78 метри мураббаъ мебошад.
         Соли 2011 дар Душанбе бузургтарин дар Осиёи Марказӣ Китобхонаи миллии Тоҷикистон бунёд ва ба истифода дода шудааст. Теъдоди хазинаи Китобхонаи миллии Тоҷикистон зиёда аз 6 миллион нусха китобро ташкил медиҳад. Аз он ҷумла, зиёда аз 3 млн нусха хазинаи Китобхонаи давлатии ба номи Абулқосим Фирдавсӣ ва боқимонда саҳми аҳолии Тоҷикистон ва муассисаҳои давлативу хусусӣ, ташкилоту созмонҳои байналмиллалӣ мебошад.</p>
    
+
+    </div>
         <footer class="fot">
             <p>2024 сол</p>
         </footer>
-        <script src="script.js"></script>
+        <script src="./script.js"></script>
 </body>
 </html>
