--- a/habarho.html
+++ b/habarho.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сохтор</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./images/icon.png">
+    <link rel="icon" href="./image__logotip/icon.png">
     <link rel="stylesheet" href="./fontawesome-free-6.4.2-web/css/all.css">
 </head>
 <body>
@@ -33,9 +33,9 @@
          <li class="drop_list"><a href="#">Сохтор<i class="fa fa-caret-down"></i></a></li>
      <ul class="dropdown-content dropdown-content_1">
          <li><a href="./director.html">Роҳбарият</a></li>
-         <li><a href="#">Шуъбаҳо</a></li>
-         <li><a href="#">Оиннома</a></li>
-         <li><a href="#">Қонун</a></li>
+         <li><a href="./shuba.html">Шуъбаҳо</a></li>
+         <li><a href="./oinoma.html">Оиннома</a></li>
+         <li><a href="./konun.html">Қонун</a></li>
          </ul>   
               </ul> 
         <ul class="dropdown">
