--- a/samthoi faoliti konun.html
+++ b/samthoi faoliti konun.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Роҳбарият</title>
+    <title>Самтҳи фаъолияти конун</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./fontawesome-free-6.4.2-web/css/all.css">
     <link rel="icon" href="./image__logotip/icon.png">
+    <link rel="stylesheet" href="./fontawesome-free-6.4.2-web/css/all.css">
 </head>
 <body>
-
     <div class="header">
         <a href="index.html" class="logotip">
             <img src="image__logotip/icon.png" alt="">
@@ -26,23 +25,22 @@
         <img src="image__logotip/Без названия.jpg" alt="">
     </a>
     </div>
-
-    <ul class="navbar navbar_2">
+    <ul class="navbar">
         <li><a href="./index.html">Асосҳо</a></li>
         <li><a href="./habarho.html">Хабарҳо</a></li> 
         <ul class="dropdown">
          <li class="drop_list"><a href="#">Сохтор<i class="fa fa-caret-down"></i></a></li>
      <ul class="dropdown-content dropdown-content_1">
-         <li><a href="/director.html">Роҳбарият</a></li>
-         <li><a href="/shuba.html">Шуъбаҳо</a></li>
-         <li><a href="./oinoma.html">Оиннома</a></li>
+         <li><a href="./director.html">Роҳбарият</a></li>
+         <li><a href="./shuba.html">Шуъбаҳо</a></li>
+         <li><a href="oinoma.html">Оиннома</a></li>
          <li><a href="./konun.html">Қонун</a></li>
          </ul>   
               </ul> 
         <ul class="dropdown">
          <li class="drop_list"><a href="#">Қонун<i class="fa fa-caret-down"></i></a></li>
      <ul class="dropdown-content">
-         <li><a href="#">Самтҳои фаъолияти қонун</a></li>
+         <li><a href="./samthoi faoliti konun.html">Самтҳои фаъолияти қонун</a></li>
          <li><a href="#">Забони точикӣ</a></li>
          <li><a href="#">Фарҳанги мукаммали забони точикӣ</a></li>
          </ul>   
@@ -67,34 +65,6 @@
      </ul>
      <li><a href="#">Суратхона</a></li> 
      <li><a href="#">Тамос</a></li> 
-    </ul>
-    <div class="roh">
-
-        <h1 class="rohbar">Роҳбарият</h1>
-        <div class="box_2">
-            <div class="direktor">
-        <h2>Файзализода Ҷумахон Хол</h2>
-        <h3>Директори Китобхонаи миллӣ</h3>
- 
-        <div class="direktor">
-            <h2>Раҷабова Салима Советовна</h2>
-            <h3>муовини якуми Директор</h3>
-        </div>
-
-        <div class="direktor">
-            <h2>Маҳмудов Гадобек Буриевич</h2>
-            <h3>муовини Директор</h3>
-        </div>
-
-        <div class="direktor">
-            <h2>Нурзода Ҷалолуддин Низомиддин</h2>
-            <h3>муовини Директор</h3>
-        </div>
-    </div>
-</div>
-</div>
-<footer class="fot">
-    <p>2024 сол</p>
-    </footer>
+ </ul> 
 </body>
 </html>
