--- a/oinoma.html
+++ b/oinoma.html
@@ -40,7 +40,7 @@
         <ul class="dropdown">
          <li class="drop_list"><a href="#">Қонун<i class="fa fa-caret-down"></i></a></li>
      <ul class="dropdown-content">
-         <li><a href="#">Самтҳои фаъолияти қонун</a></li>
+         <li><a href="./samthoi faoliti konun.html">Самтҳои фаъолияти қонун</a></li>
          <li><a href="#">Забони точикӣ</a></li>
          <li><a href="#">Фарҳанги мукаммали забони точикӣ</a></li>
          </ul>   
