--- a/samthoi faoliti konun.html
+++ b/samthoi faoliti konun.html
@@ -65,6 +65,21 @@
      </ul>
      <li><a href="#">Суратхона</a></li> 
      <li><a href="#">Тамос</a></li> 
- </ul> 
+ </ul>
+ <div>
+     <h2 class="">Самтҳои фаъолияти конун</h2>
+     <h4>КОНУНИ ЗАБОНИ ТОҶИКӢ ВА ОМЎЗИШИ ЗАБОНҲОИ ХОРИҶӢ</h4>
+     <p>Конун аз бахшҳои муҳими Китобхонаи миллӣ буда, аз соли 2012 амал менамояд. Самтҳои фаъолияти Конун иборатанд аз:
+         - тарғиби сиёсати давлат ва ҳукумати ҷумҳурии Тоҷикистон дар мавриди забони модарӣ ва омўзиши забонҳои хориҷӣ;
+        - ташкил ва ба роҳ мондани курсҳои омўзиши забонҳои тоҷикӣ, русӣ ва дигар забонҳои хориҷӣ;
+        - таҳия ва ба чоп расонидани китобҳои муҳим ва сарчашмаҳои илмию адабӣ;
+        - ташкили рўнамоии муҳимтарин китобҳои ба тозагӣ аз чоп баромада;
+        - ташкилу баргузор намудани нишастҳо ва ҳамоишҳои илмию адабӣ ва таҷлили санадҳои муҳими таърихию фарҳангӣ;
+        - ҳамасола ба муносибати Рўзи забон, Солонаи Айнӣ, Рўзи Рўдакӣ, Рўзи ҷаҳонии Мавлоно ва ғайра доир намудани нишастҳои илмию адабӣ ва фарҳангӣ;
+        - ба роҳ мондан ва пайгирии ҳамкориҳои илмию фарҳангии Китобхонаи миллӣ бо муассисаҳои илмӣ ва таълимии кишвар.</p>
+    </div>
+        <footer class="fot">
+    <p>2024 сол</p>
+</footer> 
 </body>
 </html>
