--- a/director.html
+++ b/director.html
@@ -43,30 +43,30 @@
          <li class="drop_list"><a href="#">Қонун<i class="fa fa-caret-down"></i></a></li>
      <ul class="dropdown-content">
          <li><a href="./samthoi faoliti konun.html">Самтҳои фаъолияти қонун</a></li>
-         <li><a href="#">Забони точикӣ</a></li>
-         <li><a href="#">Фарҳанги мукаммали забони точикӣ</a></li>
+         <li><a href="./zaboni tojiki.html">Забони точикӣ</a></li>
+         <li><a href="./farhangi mukamali zab toj.html">Фарҳанги мукаммали забони точикӣ</a></li>
          </ul>   
      </ul> 
      <ul class="dropdown">
          <li class="drop_list"><a href="#">Маҳзани электронӣ<i class="fa fa-caret-down"></i></a></li>
      <ul class="dropdown-content">
-         <li><a href="#">Феҳристи электронӣ</a></li>
-         <li><a href="#">Толорҳои хонишӣ маҷозӣ</a></li>
-         <li><a href="#">Сарчашмаҳои фосилавӣ</a></li>
-         <li><a href="#">Пайвандҳои муфид</a></li>
+         <li><a href="./fehristi electroni.html">Феҳристи электронӣ</a></li>
+         <li><a href="./tolori honishi majozi.html">Толорҳои хонишӣ маҷозӣ</a></li>
+         <li><a href="./sarchamai fosilavi.html">Сарчашмаҳои фосилавӣ</a></li>
+         <li><a href="./payvandhoi mufid.html">Пайвандҳои муфид</a></li>
          </ul>   
               </ul> 
               <ul class="dropdown">
          <li class="drop_list"><a href="#">Роҳнамои хонанда<i class="fa fa-caret-down"></i></a></li>
          <ul class="dropdown-content">
-             <li><a href="#">Қоидаҳои сабти ном</a></li>
-         <li><a href="#">Толорҳои хониш</a></li>
-         <li><a href="#">Марказҳои фарҳангӣ</a></li>
-         <li><a href="#">Реҷаи корӣ</a></li>
+             <li><a href="./koidai sabti nom.html">Қоидаҳои сабти ном</a></li>
+         <li><a href="./tolori honish.html">Толорҳои хониш</a></li>
+         <li><a href="./markazi farhangi.html">Марказҳои фарҳангӣ</a></li>
+         <li><a href="./rejai kori.html">Реҷаи корӣ</a></li>
          </ul>   
      </ul>
-     <li><a href="#">Суратхона</a></li> 
-     <li><a href="#">Тамос</a></li> 
+     <li><a href="./surathona.html">Суратхона</a></li> 
+     <li><a href="./kontakti.html">Тамос</a></li> 
     </ul>
     <div class="roh">
 
