--- a/farhangi mukamali zab toj.html
+++ b/farhangi mukamali zab toj.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Самтҳи фаъолияти конун</title>
+    <title>Фарҳанги мукаммали забони тоҷикӣ</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./image__logotip/icon.png">
     <link rel="stylesheet" href="./fontawesome-free-6.4.2-web/css/all.css">
@@ -66,20 +66,21 @@
      <li><a href="./surathona.html">Суратхона</a></li> 
      <li><a href="./kontakti.html">Тамос</a></li> 
  </ul>
- <div>
-     <h2 class="txt">Самтҳои фаъолияти конун</h2>
-     <h4 class="txt_par">КОНУНИ ЗАБОНИ ТОҶИКӢ ВА ОМЎЗИШИ ЗАБОНҲОИ ХОРИҶӢ</h4>
-     <p class="txt_1">Конун аз бахшҳои муҳими Китобхонаи миллӣ буда, аз соли 2012 амал менамояд. Самтҳои фаъолияти Конун иборатанд аз:
-         - тарғиби сиёсати давлат ва ҳукумати ҷумҳурии Тоҷикистон дар мавриди забони модарӣ ва омўзиши забонҳои хориҷӣ;
-        - ташкил ва ба роҳ мондани курсҳои омўзиши забонҳои тоҷикӣ, русӣ ва дигар забонҳои хориҷӣ;
-        - таҳия ва ба чоп расонидани китобҳои муҳим ва сарчашмаҳои илмию адабӣ;
-        - ташкили рўнамоии муҳимтарин китобҳои ба тозагӣ аз чоп баромада;
-        - ташкилу баргузор намудани нишастҳо ва ҳамоишҳои илмию адабӣ ва таҷлили санадҳои муҳими таърихию фарҳангӣ;
-        - ҳамасола ба муносибати Рўзи забон, Солонаи Айнӣ, Рўзи Рўдакӣ, Рўзи ҷаҳонии Мавлоно ва ғайра доир намудани нишастҳои илмию адабӣ ва фарҳангӣ;
-        - ба роҳ мондан ва пайгирии ҳамкориҳои илмию фарҳангии Китобхонаи миллӣ бо муассисаҳои илмӣ ва таълимии кишвар.</p>
+ <h2 class="zag">Фарҳанги мукаммали забони тоҷикӣ</h2>
+ <div class="farh">
+    <div class="kit">
+        <img src="/images/farhangi_zaboni_tojiki.jpg" alt="">
     </div>
-        <footer class="fot">
+    <div>
+        <p class="txt_kit">Фарҳангнигорӣдар таърихи забони тоҷикӣ собиқаи дерина ва намунаҳои барҷаста дорад. Фарҳангу луғатномаҳои фаровон, ки луғатшиносон ва фарҳангнигорони машҳур дар давраҳои гуногун таҳия ва таълиф кардаанд, ганҷинаи бебаҳои вожагони забони тоҷикӣ маҳсуб гардида, то имрўз қолаб ва шаклу гунаҳои мухталифи калимасозӣ ва истилоҳофаринии забон аз рўи онҳо омўхта мешавад. Дар ин фарҳанг ва луғатҳои гуногунҳадаф муаллифону мураттибон тағйироту таҳаввулоти бахши вожагони забон ва калимаҳои навсохту тозаэҷоди замони худро бо шарҳу тафсир сабт карда, барои нигаҳдошту такмил ба ояндагон мерос мондаанд. Фарҳангнигорӣ як риштаи басо муҳими забоншиносии тоҷик буда, таҳлил ва баррасии он яке аз василаҳои асосии пажўҳиш ва таҳқиқи бахши вожагони забон маҳсуб мешавад.
+            Ҳадафи асосии чунин таҳқиқот таҳияи феҳристи мукаммали фарҳангҳои тоҷикӣ-форсӣ, тартиб додани маҷмўи умумии баргаҳои хаттӣ ва компютерии вожагон ва таркибҳои дар ин фарҳангҳо сабтшуда, баррасии илмии усулҳои фарҳангнависӣ, таҳия ва нашри матни интиқодии фарҳангҳои пешин, бунёди як маркази умумии таҳқиқи муқоисавии фарҳангҳо ва дар ниҳоят, дар асоси ин фарҳангҳо таҳия намудани як фарҳанги мукаммали вожагони тамоми минтақаҳои интишори забон мебошад.
+            Дарёфти Китоб:</p>
+            <p class="txt_kit"><a href="http://old.kmt.tj/sites/default/files/pdf_files/farhangi_z_tj/farhangi_zaboni_tojiki_jildi_1.pdf">ҷилди якум</p></a>
+            <p class="txt_kit"><a href="http://old.kmt.tj/sites/default/files/pdf_files/farhangi_z_tj/farhangi_zaboni_tojiki_jildi_2.pdf">ҷилди дуюм</p></a>
+    </div>
+ </div>
+ <footer class="fot fot_2">
     <p>2024 сол</p>
-</footer> 
+</footer>
 </body>
 </html>
