--- a/fehristi electroni.html
+++ b/fehristi electroni.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Самтҳи фаъолияти конун</title>
+    <title>Феҳристи элек­тро­нӣ</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./image__logotip/icon.png">
     <link rel="stylesheet" href="./fontawesome-free-6.4.2-web/css/all.css">
@@ -66,20 +66,17 @@
      <li><a href="./surathona.html">Суратхона</a></li> 
      <li><a href="./kontakti.html">Тамос</a></li> 
  </ul>
- <div>
-     <h2 class="txt">Самтҳои фаъолияти конун</h2>
-     <h4 class="txt_par">КОНУНИ ЗАБОНИ ТОҶИКӢ ВА ОМЎЗИШИ ЗАБОНҲОИ ХОРИҶӢ</h4>
-     <p class="txt_1">Конун аз бахшҳои муҳими Китобхонаи миллӣ буда, аз соли 2012 амал менамояд. Самтҳои фаъолияти Конун иборатанд аз:
-         - тарғиби сиёсати давлат ва ҳукумати ҷумҳурии Тоҷикистон дар мавриди забони модарӣ ва омўзиши забонҳои хориҷӣ;
-        - ташкил ва ба роҳ мондани курсҳои омўзиши забонҳои тоҷикӣ, русӣ ва дигар забонҳои хориҷӣ;
-        - таҳия ва ба чоп расонидани китобҳои муҳим ва сарчашмаҳои илмию адабӣ;
-        - ташкили рўнамоии муҳимтарин китобҳои ба тозагӣ аз чоп баромада;
-        - ташкилу баргузор намудани нишастҳо ва ҳамоишҳои илмию адабӣ ва таҷлили санадҳои муҳими таърихию фарҳангӣ;
-        - ҳамасола ба муносибати Рўзи забон, Солонаи Айнӣ, Рўзи Рўдакӣ, Рўзи ҷаҳонии Мавлоно ва ғайра доир намудани нишастҳои илмию адабӣ ва фарҳангӣ;
-        - ба роҳ мондан ва пайгирии ҳамкориҳои илмию фарҳангии Китобхонаи миллӣ бо муассисаҳои илмӣ ва таълимии кишвар.</p>
-    </div>
-        <footer class="fot">
+ <h2 class="zag zag_6">Феҳристи электронӣ</h2>
+ <p class="txt_kit txt_feh">Китобхонаи миллӣ дорои ду навъи феҳрист аст. Феҳристи анъанавӣ ва феҳристи электронӣ. Барои истифодаи феҳристи электронӣ барномаи «ExLibris Aleph» насб шудааст, ки кори хонандагонро хеле осон ва содда мекунад.
+
+    Қисми «ОРАС»-и барномаи «ExLibris Aleph» барои истифодаи хонандагон таъсис шудааст. Феҳристи электрониро бо рақами корти аъзогӣ ва коди вурудӣ, ки дар замони бақайдгирӣ ба хонанда дода мешавад, метавон истифода бурд. 
+    
+    Пас аз ворид шудан ба барнома хонанда рақами корт ва коди вурудии худро ворид намуда, сипас тугмачаи (log On) -ро пахш менамояд, китоби мавриди назари худро ҷустуҷӯ ва пайдо намуда, барои мутолеаи он дархост мефиристад.
+    
+    Китоби мавриди назарро хонанда метавонад аз рўи номи муаллиф, номи асар ва соли интишори он ҷустуҷў намояд.
+    Пас аз дарёфти китоб ё манобеъи иттилоотии лозима тугмачаи (Go) -ро пахш менамояд ва дархости худро ба махзани лозима мефиристад. Илова бар ин хонанда метавонад мушаххасоти библиографии маводи лозимаро дастнавис карда, ба толори хониш фиристад.</p>
+ <footer class="fot fot_2">
     <p>2024 сол</p>
-</footer> 
+</footer>
 </body>
 </html>
