--- a/koidai sabti nom.html
+++ b/koidai sabti nom.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Самтҳи фаъолияти конун</title>
+    <title>Қоидаҳои сабти ном</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./image__logotip/icon.png">
     <link rel="stylesheet" href="./fontawesome-free-6.4.2-web/css/all.css">
+    <link rel="icon" href="./image__logotip/icon.png">
 </head>
 <body>
+    
     <div class="header">
         <a href="index.html" class="logotip">
             <img src="image__logotip/icon.png" alt="">
@@ -25,15 +26,16 @@
         <img src="image__logotip/Без названия.jpg" alt="">
     </a>
     </div>
-    <ul class="navbar">
+
+    <ul class="navbar navbar_2">
         <li><a href="./index.html">Асосҳо</a></li>
         <li><a href="./habarho.html">Хабарҳо</a></li> 
         <ul class="dropdown">
          <li class="drop_list"><a href="#">Сохтор<i class="fa fa-caret-down"></i></a></li>
      <ul class="dropdown-content dropdown-content_1">
-         <li><a href="./director.html">Роҳбарият</a></li>
-         <li><a href="./shuba.html">Шуъбаҳо</a></li>
-         <li><a href="oinoma.html">Оиннома</a></li>
+         <li><a href="/director.html">Роҳбарият</a></li>
+         <li><a href="/shuba.html">Шуъбаҳо</a></li>
+         <li><a href="./oinoma.html">Оиннома</a></li>
          <li><a href="./konun.html">Қонун</a></li>
          </ul>   
               </ul> 
@@ -65,21 +67,20 @@
      </ul>
      <li><a href="./surathona.html">Суратхона</a></li> 
      <li><a href="./kontakti.html">Тамос</a></li> 
- </ul>
- <div>
-     <h2 class="txt">Самтҳои фаъолияти конун</h2>
-     <h4 class="txt_par">КОНУНИ ЗАБОНИ ТОҶИКӢ ВА ОМЎЗИШИ ЗАБОНҲОИ ХОРИҶӢ</h4>
-     <p class="txt_1">Конун аз бахшҳои муҳими Китобхонаи миллӣ буда, аз соли 2012 амал менамояд. Самтҳои фаъолияти Конун иборатанд аз:
-         - тарғиби сиёсати давлат ва ҳукумати ҷумҳурии Тоҷикистон дар мавриди забони модарӣ ва омўзиши забонҳои хориҷӣ;
-        - ташкил ва ба роҳ мондани курсҳои омўзиши забонҳои тоҷикӣ, русӣ ва дигар забонҳои хориҷӣ;
-        - таҳия ва ба чоп расонидани китобҳои муҳим ва сарчашмаҳои илмию адабӣ;
-        - ташкили рўнамоии муҳимтарин китобҳои ба тозагӣ аз чоп баромада;
-        - ташкилу баргузор намудани нишастҳо ва ҳамоишҳои илмию адабӣ ва таҷлили санадҳои муҳими таърихию фарҳангӣ;
-        - ҳамасола ба муносибати Рўзи забон, Солонаи Айнӣ, Рўзи Рўдакӣ, Рўзи ҷаҳонии Мавлоно ва ғайра доир намудани нишастҳои илмию адабӣ ва фарҳангӣ;
-        - ба роҳ мондан ва пайгирии ҳамкориҳои илмию фарҳангии Китобхонаи миллӣ бо муассисаҳои илмӣ ва таълимии кишвар.</p>
+    </ul>
+    <h2 class="zag">Қоидаҳои сабти ном</h2>
+    <div class="pas">
+        <div class="pas_img">
+            <img src="./images/pasport.jpg" alt="">
+        </div>
+        <div class="pas_txt">
+            <p>Барои сабти номи истифодабарандагон ба Китобхонаи миллии Тоҷикистон пешниҳоди шиноснома ҳатмист. Хонанда пеш аз он ки дар Китобхона сабти ном шавад, акси ӯ гирифта шуда, дар баробари маълумоти шиноснома сурати ӯ низ дар корти пластикӣ ҷой карда мешавад. Инчунин хонанда бояд 10 сомонӣ маблағи кортро супорад. 
+                Баъд аз ин ба хонанда корти пластикии электронӣ ва коди махфӣ дода мешад. Бо ин корт хонанда метавонад аз феҳристи ягонаи барномаи ALEPH ва китобхонаи электронӣ муддати 3 сол бе мамоният истифода барад. 
+                Дар сўрати гум шудани корти пластикӣ лозим аст, ки хонанда фавран ба масъулони Шуъбаи хизматрасонӣ ва ба муштариёни Китобхонаи миллии Тоҷикистон муроҷиат намояд. </p>
+        </div>
     </div>
-        <footer class="fot">
-    <p>2024 сол</p>
-</footer> 
+    <footer class="fot">
+        <p>2024 сол</p>
+    </footer>
 </body>
 </html>
