--- a/zaboni tojiki.html
+++ b/zaboni tojiki.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Самтҳи фаъолияти конун</title>
+    <title>Забони точикӣ</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./image__logotip/icon.png">
     <link rel="stylesheet" href="./fontawesome-free-6.4.2-web/css/all.css">
@@ -49,7 +49,7 @@
          <li class="drop_list"><a href="#">Маҳзани электронӣ<i class="fa fa-caret-down"></i></a></li>
      <ul class="dropdown-content">
          <li><a href="./fehristi electroni.html">Феҳристи электронӣ</a></li>
-         <li><a href="./tolori honishi majozi.html">Толорҳои хонишӣ маҷозӣ</a></li>
+         <li><a href="tolori honishi majozi.html">Толорҳои хонишӣ маҷозӣ</a></li>
          <li><a href="./sarchamai fosilavi.html">Сарчашмаҳои фосилавӣ</a></li>
          <li><a href="./payvandhoi mufid.html">Пайвандҳои муфид</a></li>
          </ul>   
@@ -67,19 +67,16 @@
      <li><a href="./kontakti.html">Тамос</a></li> 
  </ul>
  <div>
-     <h2 class="txt">Самтҳои фаъолияти конун</h2>
-     <h4 class="txt_par">КОНУНИ ЗАБОНИ ТОҶИКӢ ВА ОМЎЗИШИ ЗАБОНҲОИ ХОРИҶӢ</h4>
-     <p class="txt_1">Конун аз бахшҳои муҳими Китобхонаи миллӣ буда, аз соли 2012 амал менамояд. Самтҳои фаъолияти Конун иборатанд аз:
-         - тарғиби сиёсати давлат ва ҳукумати ҷумҳурии Тоҷикистон дар мавриди забони модарӣ ва омўзиши забонҳои хориҷӣ;
-        - ташкил ва ба роҳ мондани курсҳои омўзиши забонҳои тоҷикӣ, русӣ ва дигар забонҳои хориҷӣ;
-        - таҳия ва ба чоп расонидани китобҳои муҳим ва сарчашмаҳои илмию адабӣ;
-        - ташкили рўнамоии муҳимтарин китобҳои ба тозагӣ аз чоп баромада;
-        - ташкилу баргузор намудани нишастҳо ва ҳамоишҳои илмию адабӣ ва таҷлили санадҳои муҳими таърихию фарҳангӣ;
-        - ҳамасола ба муносибати Рўзи забон, Солонаи Айнӣ, Рўзи Рўдакӣ, Рўзи ҷаҳонии Мавлоно ва ғайра доир намудани нишастҳои илмию адабӣ ва фарҳангӣ;
-        - ба роҳ мондан ва пайгирии ҳамкориҳои илмию фарҳангии Китобхонаи миллӣ бо муассисаҳои илмӣ ва таълимии кишвар.</p>
+    <div class="zab">
+        <h2>Забони тоҷикӣ</h2>
+        <p><a href="http://old.kmt.tj/node/301" class="zabon">Қонуни Ҷумҳурии Тоҷикистон
+            <br>
+            дар бораи забони давлатии Ҷумҳурии Тоҷикистон</a></p>
+            <p><a href="http://old.kmt.tj/node/302" class="zabon">Қоидаҳои имлои забони тоҷикӣ</a></p>
     </div>
-        <footer class="fot">
-    <p>2024 сол</p>
-</footer> 
+
+    <footer class="fot fot_2">
+        <p>2024 сол</p>
+    </footer>
 </body>
 </html>
